# 25spr-DXEngine

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindDirectX11.cmake
engine/assets/shader/: ps_base.hlsl  ps_skybox.hlsl  vs_base.hlsl  vs_skybox.hlsl
engine/include/core/: game.h  input_manager.h  window_base.h  window_win.h
engine/include/entity/: camera_base.h  camera_fp.h  camera_tp.h  entity.h  entity_controllable.h  light.h
engine/include/graphics/dx11/: dx_device_mgr.h  dx_engine.h  dx_swapchain.h
engine/include/resources/: buffer_type.h  game_resource_mgr.h  material.h  mesh.h  render_component.h  shader.h  texture.h  vertex.h
engine/include/utils/: forward.h  keycode.h  logger.h
engine/source/core/: game.cpp  input_manager.cpp  window_win.cpp
engine/source/entity/: camera_base.cpp  camera_fp.cpp  camera_tp.cpp  entity.cpp  entity_controllable.cpp  light.cpp
engine/source/graphics/: dx_device_mgr.cpp  dx_engine.cpp  dx_swapchain.cpp
engine/source/resources/: game_resource_mgr.cpp  material.cpp  mesh.cpp  render_component.cpp  shader.cpp  texture.cpp  vertex.cpp
engine/source/utils/: forward.cpp  logger.cpp
game/celestial_rover/include/: celestial_body.h  game_3dbasic.h  game_forward.h  orbit.h  spaceship.h
game/celestial_rover/source/: celestial_body.cpp  game_3dbasic.cpp  main.cpp  orbit.cpp  spaceship.cpp
